edit services, add form progress restore from localStorage, add dialog

--- a/src/app/order-result/order-result.component.html
+++ b/src/app/order-result/order-result.component.html
@@ -1,1 +1,34 @@
-<p>order-result works!</p>
+<div class="order-result" *ngIf="orderData">
+
+    <div class="travel-direction-info">
+        <div class="departure-place">
+            {{orderData.departurePlace}}
+        </div>
+        <mat-icon>arrow_right_alt</mat-icon>
+        <div class="arrival-place">
+            {{orderData.arrivalPlace}}
+        </div>
+
+        <!-- <mat-card>
+            <mat-card-title>Вылет</mat-card-title>
+            <mat-card-content>
+                <h4>Country</h4>
+                <h4>City</h4>
+                <h4>Airport</h4>
+            </mat-card-content>
+        </mat-card> -->
+    </div>
+
+    <!-- <div class="travel-to">
+        <mat-card>
+            some
+        </mat-card>
+    </div> -->
+
+    <div class="passengers-info" *ngFor="let passenger of orderData?.passengers">
+        <mat-card>
+            {{passenger.fName}} {{passenger.lName}}
+        </mat-card>
+    </div>
+
+</div>
