--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 *{
     box-sizing: border-box;
 }
+
+
+// .custom-dialog .mat-dialog-container {
+    // padding: 6px;
+//   }
