--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <div class="main">
-    <router-outlet></router-outlet>
+    <ng-container *ngIf="resourcesLoaded else loadingData">
+        <router-outlet></router-outlet>
+    </ng-container>
+    <ng-template #loadingData>
+        <mat-spinner></mat-spinner>
+    </ng-template>
 </div>
