--- a/src/app/order-form/create-new-form-dialog/create-new-form-dialog.component.html
+++ b/src/app/order-form/create-new-form-dialog/create-new-form-dialog.component.html
@@ -1,10 +1,10 @@
 <div class="dialog-form-use-previous-data">
-    <h3 mat-dialog-title>Progress form data detected</h3>
+    <h3 mat-dialog-title>Previous progress form data detected!</h3>
     <div mat-dialog-content>
-        <p>Use previus data or create a new one?</p>
+        <p>Сontinue filling the form or create a new one?</p>
     </div>
     <div mat-dialog-actions>
-        <button mat-button (click)="usePreviousData()">Previus</button>
+        <button mat-button (click)="usePreviousData()">Сontinue</button>
         <button mat-button (click)="createNew()" cdkFocusInitial>New</button>
     </div>
 </div>
