--- a/src/app/order-result/order-result.component.scss
+++ b/src/app/order-result/order-result.component.scss
@@ -8,34 +8,22 @@
 .travel-direction-info{
     min-width: 500px;
     min-height: 150px;
-    background: rgba(0, 0, 255, 0.228);
-    // padding: 15px;
-    // width: 100%;
-    // height: auto;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    background: #fff;
+    border-radius: 8px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
-// .travel-from, .travel-to, .passengers-info{
-//     padding: 15px;
-//     // height: 100%;
-
-//     mat-card{
-//         height: 100%;
-//     }
-// //     // width: 350px;
-// //     // height: 400px;
-// }
-
-// .travel-from, .travel-to {
-//     width: 350px;
-//     height: 400px;
-//     flex: 50%;
-// } 
+.departure-info, .arrival-info{
+    display: flex;
+    flex-flow: column nowrap;
+}
 
 .passengers-info{
-    background: rgba(0, 0, 255, 0.246);
     min-width: 400px;
     min-height: 300px;
-    // flex: 100%;
     height: auto;
-    // flex: auto
 }
